--- a/css/main.css
+++ b/css/main.css
@@ -47,3 +47,25 @@ nav .nav-right-section .menu-icon {
   width: 25px;
   height: 25px;
 }
+
+nav .nav-right-section img {
+  border-radius: 50%;
+  margin-left: 10px;
+}
+
+main {
+  margin-top: 150px;
+  text-align: center;
+}
+
+main .main-logo {
+  width: 530px;
+  margin: 0 auto;
+  margin-bottom: 35px;
+}
+
+main .main-logo img{
+    width: 300px;
+}
+
+
